...
            <ImageView
                android:id="@+id/profilePicThumb"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/dp_72"
                android:contentDescription="@string/profile_picture_thumbnail"
                app:layout_constraintBottom_toTopOf="@+id/firstNameText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person_melon_48dp" />

            <EditText
                android:id="@+id/firstNameText"
...
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/sp_18"
                app:layout_constraintTop_toBottomOf="@id/profilePicBtn" />

            <EditText
                android:id="@+id/lastNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/last_name"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/sp_18"
                app:layout_constraintTop_toBottomOf="@id/firstNameText" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/sp_18"
                app:layout_constraintTop_toBottomOf="@id/lastNameText" />

            <EditText
                android:id="@+id/occupationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/occupation"
                android:hint="@string/occupation"
                android:inputType="text"
...
                android:hint="@string/location"
                android:inputType="text"
                android:textSize="@dimen/sp_18"
                app:layout_constraintTop_toBottomOf="@id/occupationText" />

            <Button
                android:id="@+id/dobBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/date_of_birth"
                android:focusable="false"
                android:hint="@string/date_of_birth"
...
                android:textColor="?android:textColorHint"
                android:textSize="@dimen/sp_18"
                android:theme="@style/ButtonStyles"
                app:layout_constraintTop_toBottomOf="@id/locationText" />

            <TextView
                android:id="@+id/ageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_18"
...
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/ageText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:onClick="getFormSuccessActivity"
        android:text="@string/submit"
        android:textColor="?android:textColorHint"
        android:textSize="@dimen/sp_18"
...
